# lantern

./: LICENSE
elucid/: Cargo.toml
elucid/elucid-cli/: Cargo.toml
elucid/elucid-cli/src/: command.rs
elucid/elucid-cli/src/commands/: repl.rs
elucid/elucid-engine/: Cargo.toml
elucid/elucid-engine/src/: context.rs  planner.rs
elucid/elucid-ingester/: Cargo.toml
elucid/elucid-language/src/snapshots/: elucid_language__parser__tests__basic_source.snap  elucid_language__parser__tests__math_precedence.snap  elucid_language__parser__tests__parenthesis_precedence.snap  elucid_language__parser__tests__should_fail.snap  elucid_language__parser__tests__sort_mixed.snap  elucid_language__parser__tests__string_quoting.snap
lantern/: Cargo.toml
lantern/elucid-cli/src/: main.rs
lantern/elucid-cli/src/commands/: execute.rs  ingest.rs  validate.rs
lantern/elucid-cli/src/repl/: highlighter.rs  repl.rs  validator.rs
lantern/elucid-language/: Cargo.toml
lantern/elucid-language/src/: ast.rs  lexer.rs
lantern/elucid-language/src/snapshots/: elucid_language__parser__tests__basic_literal_filter.snap
lantern/lantern-cli/: Cargo.toml
lantern/lantern-cli/src/: command.rs  main.rs  utils.rs
lantern/lantern-cli/src/commands/: entrypoint.rs  execute.rs  ingest.rs  mod.rs  repl.rs  validate.rs
lantern/lantern-cli/src/repl/: highlighter.rs  mod.rs  repl.rs
lantern/lantern-engine/: Cargo.toml
lantern/lantern-engine/src/: context.rs  lib.rs  planner.rs
lantern/lantern-ingester/: Cargo.toml
lantern/lantern-ingester/src/: ingester.rs  lib.rs
lantern/lantern-language/: Cargo.toml
lantern/lantern-language/src/: ast.rs  lexer.rs  lib.rs  parser.rs  parser_error.rs  span.rs
lantern/lantern-language/src/snapshots/: lantern_language__parser__tests__basic_literal_filter.snap  lantern_language__parser__tests__basic_source.snap  lantern_language__parser__tests__math_precedence.snap  lantern_language__parser__tests__parenthesis_precedence.snap  lantern_language__parser__tests__should_fail.snap  lantern_language__parser__tests__sort_mixed.snap  lantern_language__parser__tests__string_quoting.snap
