[workspace]
resolver = "2"
members = [
    "elucid-cli",
    "elucid-engine",
    "elucid-ingester",
    "elucid-language",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
ariadne = "0.6.0"
arrow = "57.1.0"
arrow-json = "57.1.0"
chumsky = "1.0.0-alpha.8"
clap = "4.5.53"
datafusion = "51.0.0"
logos = "0.16.0"
nu-ansi-term = "0.50.3"
parquet = "57.1.0"
reedline = "0.44.0"
thiserror = "2.0.17"
tokio = "1.48.0"
uuid = "1.19.0"

elucid-engine = { path = "elucid-engine" }
elucid-ingester = { path = "elucid-ingester" }
elucid-language = { path = "elucid-language" }
