[package]
name = "elucid-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
nu-ansi-term = { workspace = true }
reedline = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

elucid-engine = { workspace = true }
elucid-ingester = { workspace = true }
elucid-language = { workspace = true }
