[package]
name = "lantern-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

lantern-engine = { workspace = true }
lantern-language = { workspace = true }
