[package]
name = "lantern-ingester"
version.workspace = true
edition.workspace = true

[dependencies]
arrow = { workspace = true }
arrow-json = { workspace = true }
parquet = { workspace = true, features = ["async", "tokio"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
